# advent-of-code-2024

./: .gitignore  README.md  aoc2024.opam  dune-project  flake.nix
lib/: drivers.ml  dune  problem_template.ml
lib/problems/: dune  problem_2024_01.ml  problem_2024_02.ml  problem_2024_03.ml  problem_2024_04.ml  problem_2024_05.ml  problem_2024_06.ml  problem_2024_07.ml  problem_2024_08.ml  problem_2024_09.ml  problem_2024_10.ml  problem_2024_11.ml  problem_2024_11.rs  problem_2024_12.ml  problem_template.ml  utils.ml
